# Minecraft-CV

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  setup.sh  test_debug.py  test_pipeline.py  test_pitch.py
.antigravitycli/: b6833db1-be0d-4641-bc75-9846db823758.json
.claude/: CLAUDE.md  keybindings.json  settings.json
.claude/agents/: cv-pipeline-debugger.md  gesture-logic-auditor.md  latency-profiler.md  macos-input-specialist.md  reviewer.md
.claude/projects/-Users-anish-1-2-3-Documents-minecraft-cv/memory/: feedback-setup-commands.md
.claude/projects/<project-hash>/memory/: MEMORY.md  continuity-camera-wrong-device.md  debug-on-recorded-clips.md  macos-camera-permission-black-frames.md  mps-benchmark-sync.md  opencv-window-main-thread.md  project-overview.md  pytorch-mps-setup.md  schmitt-trigger-chatter-fix.md  stale-frame-buffer-lag.md
.claude/rules/: gestures.md  input-layer.md  mouse-look.md  opencv-pytorch.md  tech-stack.md  ui-qt.md
.claude/skills/frame-analyzer/: SKILL.md  frame_analyzer.py
data/clips/: .gitkeep
review_critique/: ARCHITECTURE_REVIEW.md  GESTURE_SYSTEM_CV_HCI_CRITIQUE.md  LATENCY_AND_RELIABILITY_AUDIT.md  OPEN_SOURCE_LAUNCH_READINESS.md  UX_REVIEW_PRE_RELEASE.md
src/minecraft_cv/: __init__.py  calibration.py  cli.py  config.py  pipeline.py  recovery.py  runtime.py
src/minecraft_cv/capture/: __init__.py  buffer.py  source.py
src/minecraft_cv/gestures/: __init__.py  extension.py  face_gestures.py  finger_state.py  inventory.py  pinch.py  registry.py  safety.py  schmitt.py
src/minecraft_cv/input/: __init__.py  emitter.py  mac_emitter.py
src/minecraft_cv/joystick/: __init__.py  deadzone.py  one_euro.py  palm_normal.py  palm_tilt.py  screen.py  sprint_velocity.py  steering.py  wrist_rotation.py  wrist_tilt.py
src/minecraft_cv/tracking/: __init__.py  face_tracker.py  mediapipe_backend.py  mediapipe_face_backend.py  tracker.py
src/minecraft_cv/ui/: __init__.py  app.py  camera_view.py  keymap.py  macos_window.py  overlay.py  panels.py  skeleton.py  theme.py  widgets.py  worker.py
tests/: conftest.py  test_bench.py  test_calibration.py  test_config.py  test_dynamic_deadzone.py  test_emitter.py  test_empty_face.py  test_extension.py  test_face.py  test_face_gestures.py  test_finger_state.py  test_gesture_registry.py  test_hotbar.py  test_inventory.py  test_joystick.py  test_mac_emitter.py  test_mac_emitter_modifier.py  test_macos_window.py  test_no_inventory_mode.py  test_one_euro.py  test_palm_normal.py  test_palm_tilt.py  test_palm_tilt_pipeline.py  test_pinch.py  test_pipeline.py  test_pipeline_recovery.py  test_recovery.py  test_runtime.py  test_safety.py  test_schmitt.py  test_skeleton.py  test_sprint_velocity.py  test_steering.py  test_ui_keymap.py  test_wrist_rotation.py  test_wrist_tilt.py
